fix: whitespace at smaller widths

--- a/src/pages/Track.css
+++ b/src/pages/Track.css
@@ -58,7 +58,7 @@
 
 @media only screen and (max-width: 620px) {
   .single-track {
-    top: 120px;
+    position: static;
     flex-direction: column;
   }
 
